--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,8 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = "^0.115.7"
+uvicorn = {extras = ["standard"], version = "^0.34.0"}
+pydantic = {extras = ["email"], version = "^2.10.6"}
+pydantic-settings = "^2.7.1"
+
