--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ fastapi = "^0.115.7"
 uvicorn = {extras = ["standard"], version = "^0.34.0"}
 pydantic = {extras = ["email"], version = "^2.10.6"}
 pydantic-settings = "^2.7.1"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
 
