--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,5 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
 asyncpg = "^0.30.0"
 alembic = "^1.14.1"
 black = "^25.1.0"
+orjson = "^3.10.15"
 
